# app

./: .goal_test_report.xml  CHANGELOG.md  Makefile  README.md  SUMD.md  SUMR.md  TODO.md  app.doql.less  goal.yaml  local.dev.txt  planfile.yaml  prefact.yaml  pyproject.toml
.github/workflows/: build-release.yml  ci.yml  tauri-release.yml
.ifuri-test-home/: app-chat.jsonl  workspace.json
TODO/: 00-roadmap.md  10-app-desktop.md  20-get-node.md  30-connect-connectors.md  40-urirun.md  50-cicd.md  60-reuse.md  70-execution-plan.md  PLAN.md
desktop/: README.md  dev-server.sh
desktop/src-tauri/: Cargo.toml  build.rs  local.dev.txt  tauri.conf.json
desktop/src-tauri/src/: lib.rs  main.rs
docker/: Dockerfile.gui-novnc  Dockerfile.gui-test  docker-compose.gui.yml  docker-compose.novnc.yml  entrypoint-gui-novnc.sh  entrypoint-gui-test.sh  install-gui-deps.sh
docs/: API.md  ARCHITECTURE.md  WEBRTC.md
examples/: local_network.uri.flow.yaml
project/: README.md  analysis.toon.yaml  calls.mmd  calls.toon.yaml  calls.yaml  compact_flow.mmd  context.md  duplication.toon.yaml  evolution.toon.yaml  flow.mmd  index.html  logic.pl  map.toon.yaml  mermaid.export  planfile-tickets.yaml  project.toon.yaml  prompt.txt
scripts/: bootstrap-lenovo-packs.py  build-platform.py  cd-github.sh  gui_smoke.py  ifuri_app_entry.py  run-ifuri-app.bat  run-ifuri-app.sh  test-gui-docker.sh  upgrade-lenovo-node.sh  upgrade-lenovo-remote.py  vendor-uricore-js.sh
src/ifuri_app/: __init__.py  __main__.py  chat_channels.py  chat_store.py  cli.py  connect_store.py  connectors.py  discovery.py  flow_compile.py  flow_engine.py  flow_runner.py  gui.py  gui_chat.py  network_scan.py  novnc_demo.py  paths.py  remote_screen.py  runtime.py  runtime_bind.py  runtime_handlers.py  runtime_state.py  sample_data.py  storage.py  urirun_bridge.py  urisys_client.py  url_params.py  voice_pipeline.py  voice_planner.py  webrtc_pipeline.py  webrtc_signal.py
src/ifuri_app/packs/: __init__.py  loader.py  runtime.py
src/ifuri_app/web/: i18n.js  index.html  (+6 more)
systemd/: README.md  com.ifuri.runtime.plist  ifuri-runtime-user.service  ifuri-runtime.env.example  ifuri-voice-user.service  ifuri-voice.env.example
testql-scenarios/: generated-cli-tests.testql.toon.yaml  generated-from-pytests.testql.toon.yaml
tests/: test_api_runtime.py  test_chat_channels.py  test_chat_history.py  test_chat_migrate.py  test_chat_store.py  test_cli_chat.py  test_cli_run.py  test_connect_store.py  test_connectors.py  test_flow_compile.py  test_gui_smoke.py  test_ifuri_app.py  test_novnc_demo.py  test_packs_loader.py  test_packs_runtime.py  test_paths.py  test_remote_node_e2e.py  test_runtime_bind.py  test_runtime_handlers.py  test_storage.py  test_urirun_bridge.py  test_urirun_integration.py  test_url_params.py  test_voice_capabilities.py  test_voice_pack_hint.py  test_voice_planner.py  test_webrtc_pipeline.py  test_webrtc_signal.py
tests/e2e/: test_voice_playwright.py
(+1 files in other folders)
