[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ifuri"
version = "0.2.2"
description = "ifURI desktop app — voice UI, urisys-node client, and URI flow runner for urisys-examples."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{name = "ifURI"}, {name = "Tom Sapletta",email = "tom@sapletta.com"}]
keywords = ["uri", "workflow", "mcp", "agents", "llm", "automation", "desktop", "runtime"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Win32 (MS Windows)",
  "Environment :: MacOS X",
  "Environment :: X11 Applications",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = []

[project.optional-dependencies]
flows = ["pyyaml>=6.0"]
packs = ["uricore>=0.1.8", "pyyaml>=6.0"]
build = ["pyinstaller>=6.0", "pyyaml>=6.0"]
dev = [
  "pytest>=8.0",
  "pyyaml>=6.0",
  "goal>=2.1.0",
  "costs>=0.1.20",
  "pfix>=0.1.60",
]

[project.urls]
Homepage = "https://ifuri.com"

[project.scripts]
ifuri-app = "ifuri_app.cli:main"
ifuri = "ifuri_app.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ifuri_app = ["assets/*.svg", "web/*"]

[tool.pfix]
# Self-healing Python configuration
model = "openrouter/qwen/qwen3-coder-next"
auto_apply = true
auto_install_deps = true
auto_restart = false
max_retries = 3
create_backups = false
git_auto_commit = false

[tool.pfix.runtime_todo]
enabled = true
todo_file = "TODO.md"
min_severity = "low"
deduplicate = true

[tool.costs]
# AI Cost tracking configuration
badge = true
update_readme = true
readme_path = "README.md"
default_model = "openrouter/qwen/qwen3-coder-next"
analysis_mode = "byok"
full_history = true
max_commits = 500

# Cost thresholds for badge colors (USD)
badge_color_thresholds = { low = 1.0, medium = 5.0, high = 10.0, critical = 50.0 }
