[package]
name = "ifuri-voice"
version = "0.1.0"
description = "ifURI Voice — Tauri shell for /voice"
authors = ["ifURI"]
license = "Apache-2.0"
repository = "https://github.com/if-uri/app"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ifuri_voice_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5" }
tauri-plugin-log = "2"
